<resources>
    <string name="app_name">WOO-PONS</string>

    <string name="login">Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="forgot_password_question">Forgot password?</string>
    <string name="enter_email">Enter your registered email address to get the forgot password link</string>
    <string name="email">Email</string>
    <string name="send_code">Send code</string>
    <string name="enter_4_digit_code">Enter 4 digit code</string>
    <string name="next">Next</string>
    <string name="code_hint">0</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="get_great">Get great</string>
    <string name="deals_discounts_offers">deals, discounts and incentives!</string>
    <string name="spend_through_woopons">Deals on</string>
    <string name="wide_range_of_brands">Food &amp; Beverage | Health, Beauty &amp; Fitness | Entertainment &amp; Activities | Home Services &amp; SO MUCH MORE!</string>
    <string name="save_more_with">Scouting the best deals in Worcester County!</string>
    <string name="title_home">Home</string>
    <string name="title_coupons">Coupons</string>
    <string name="title_settings">Settings</string>

    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="my_favorites">My Favorites</string>
    <string name="feedback_suggestion">Feedback &amp; Suggestions</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="logout">Log out</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>

    <string name="upload_image"><u>Upload image</u></string>
    <string name="full_name">Full name</string>
    <string name="phone">Phone</string>
    <string name="next_billing_date">Next billing date</string>
    <string name="upgrade_plan">Upgrade Plan</string>
    <string name="active">Active</string>
    <string name="silver_plan">Silver Plan</string>

    <string name="share_your_thoughts">Share your thoughts…</string>
    <string name="submit">Submit</string>
    <string name="you_want_to_logout">Are you sure you want to\nlogout?</string>
    <string name="no">No</string>
    <string name="logout_without_space">Logout</string>
    <string name="version">Version</string>

    <string name="unlimited">Unlimited</string>
    <string name="get_coupon_now"><u>Activate WOO-PON</u></string>
    <string name="unlock_coupon"><u>Unlock coupon</u></string>
    <string name="view_details">View details</string>

    <string name="newly_added">Newly added</string>
    <string name="history">History</string>
    <string name="favorites">Favorites</string>

    <string name="location">Location</string>
    <string name="use_repetition">Use repetition</string>
    <string name="whats_unique">What’s UNIQUE</string>
    <string name="about_deal">About deal</string>
    <string name="about">About</string>
    <string name="has_been_operating">has been operating for… </string>
    <string name="would_like_to_know">would like you to know</string>
    <string name="how_to_use_offer">How to use your WOO-PON:</string>
    <string name="rate_experience">Rate your experience</string>
    <string name="remove_Coupon">Remove Coupon</string>
    <string name="slide_to_unlock">Slide to unlock</string>
    <string name="get_coupon">Activate WOO-PON</string>
    <string name="note_for_coupon">Please note: Once clicked, this can not be reversed. Your WOO-PON will stay active for 60 seconds. Please only redeem at checkout with worker present.</string>
    <string name="get_directions"><u>Get Directions</u></string>

    <string name="search_here_for_anything">Search here for anything…</string>
    <string name="select_categories">Select categories</string>
    <string name="recently_added">Recently added</string>
    <string name="top_brands">Featured Brands</string>
    <string name="trending_categories">Trending categories</string>
    <string name="view_all"><u>View all</u></string>
    <string name="explore">Explore</string>
    <string name="see_details">See details</string>
    <string name="like_to_redeem">Are you sure you\'d like to redeem your WOO-PON now?</string>
    <string name="unlock">Unlock</string>
    <string name="coupon_added">Coupon added</string>
    <string name="coupon_removed">Coupon removed</string>
    <string name="coupon_will_expire">Alert: Your coupon will expire within 60 seconds after unlocking</string>
    <string name="unlocked_new_woopon">You unlocked a new WOO-PON…</string>
    <string name="coupon_will_expire_now">Alert: Your coupon will expire if you go back</string>
    <string name="redeem_coupon_note">Please note: Once clicked, this can not be reversed. Your Woo-Pon will stay active for 60 seconds. Please only redeem at checkout with worker present.</string>
</resources>