<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".dashboard.ui.profile.ProfileActivity">

    <RelativeLayout
        android:id="@+id/rlToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/primary_color">

        <RelativeLayout
            android:id="@+id/rlBack"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp">

            <ImageView
                android:layout_width="12dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:src="@drawable/back" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title" />

        <TextView
            android:id="@+id/tvSave"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="50dp">

        <ImageView
            android:id="@+id/ivProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/onboarding_circle"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvUplaodImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.7"
        android:fontFamily="@font/poppins_regular"
        android:padding="10dp"
        android:text="@string/upload_image"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/full_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:enabled="false"
            android:inputType="none"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:singleLine="true"
            android:alpha="0.5"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/phone"
            android:imeOptions="actionDone"
            android:inputType="phone"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/textInputBg"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvActive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    app:cardBackgroundColor="@color/green"
                    app:cardCornerRadius="5dp">

                    <TextView
                        android:id="@+id/tvStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/active"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvPlan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/silver_plan"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvNextBilling"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:alpha="0.5"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/next_billing_date"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvUpgradePlan"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="30dp"
                    app:cardBackgroundColor="@color/primary_color"
                    app:cardCornerRadius="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/poppins_regular"
                        android:gravity="center"
                        android:text="@string/upgrade_plan"
                        android:textColor="@color/gold"
                        android:textSize="@dimen/button_font_size" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>

</LinearLayout>