<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".login.LoginActivity">

    <RelativeLayout
        android:id="@+id/rlToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/primary_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="196dp"
            android:layout_height="98dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:src="@drawable/app_icon" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/username"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="16sp"
            android:singleLine="true"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_background"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/password"
            android:textSize="16sp"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:singleLine="true"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:fontFamily="@font/poppins_regular"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"
            android:textSize="16sp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/forgot_password_question"
            android:textColor="@color/primary_color" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvLogin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="25dp"
            app:cardBackgroundColor="@color/primary_color"
            app:cardCornerRadius="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/gold"
                android:textSize="@dimen/button_font_size" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>