<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bgImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/onboarding_1"
        android:layout_marginBottom="250dp"
        android:scaleType="centerCrop"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-50dp"
        app:cardCornerRadius="50dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/poppins_light"
                android:gravity="center"
                android:text="@string/get_great"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTop"
                android:fontFamily="@font/poppins_light"
                android:gravity="center"
                android:text="@string/deals_discounts_offers"
                android:autoSizeMinTextSize="14sp"
                android:textColor="@color/primary_color"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/llDots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/cvNext"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="50dp"
                android:orientation="horizontal" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvNext"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="70dp"
                app:cardBackgroundColor="@color/primary_color"
                app:cardCornerRadius="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:text="@string/next"
                    android:textColor="@color/gold"
                    android:textSize="@dimen/button_font_size" />
            </androidx.cardview.widget.CardView>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>