<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".dashboard.ui.feedback.FeedbackActivity">

    <RelativeLayout
        android:id="@+id/rlToolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/primary_color">

        <RelativeLayout
            android:id="@+id/rlBack"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp">

            <ImageView
                android:layout_width="12dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:src="@drawable/back"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/feedback_suggestion"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/textInputBg"
        app:cardCornerRadius="10dp">

        <EditText
            android:id="@+id/etFeedback"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:focusable="true"
            android:fontFamily="@font/poppins_regular"
            android:gravity="start|top"
            android:hint="@string/share_your_thoughts"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:padding="10dp"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvSubmit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/primary_color"
        app:cardCornerRadius="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/gold"
            android:textSize="@dimen/button_font_size" />
    </androidx.cardview.widget.CardView>

</LinearLayout>